[package]
name = "cloudflare_sys"
version = "0.1.0"
authors = ["Sagar Shrestha <sg28r8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = true }
regex = "1.4.2"
rustls = "0.18.1"
webpki = "0.21.3"
webpki-roots = "0.20.0"
